# DataInsightFlow

./: .replit  GIT_WORKFLOW.md  README.md  app.py  app.py.bak  app.py.new  pyproject.toml  replit.nix  requirements.txt  update_admin.py  update_auth.sh  user_guide.md
.streamlit/: config.toml  style.css
attached_assets/: Pasted--0-chart-type-scatter-plot-title-Units-vs-Price-columns-0-Units-1-Price--1744105827456.txt  Pasted--Home-li-a-href-pages-01-Upload-Data-py-target-self-class-div--1744063090787.txt  Pasted--a-href-pages-01-Upload-Data-py-target-self-class-sidebar-nav-item-active-div-1744015510294.txt  Pasted--li-a-href-pages-01-Upload-Data-py-target-self-class-div--1744064500520.txt  Pasted--ul-data-testid-stSidebarNavItems-class-st-emotion-cache-1gczx66-e19011e62-li-div-data-testid--1744016894631.txt  Pasted-Based-off-this-prd-build-this-app-Be-agnostic-on-tech-stack-and-leave-room-to-added-features-Produ-1743967595098.txt  Pasted-CiAgICAgICAgPGh0bWw-CiAgICAgICAgPGhlYWQ-CiAgICAgICAgICAgIDx0aXRsZT5EYXRhc2V0IFByb2ZpbGUgUmVwb3J0PC90-1744161429902.txt  Pasted-CiAgICAgICAgPGh0bWw-CiAgICAgICAgPGhlYWQ-CiAgICAgICAgICAgIDx0aXRsZT5EYXRhc2V0IFByb2ZpbGUgUmVwb3J0PC90-1744245421265.txt  Pasted-Reset-Password-Enter-your-email-address-below-to-receive-a-password-reset-link-Email-clfranc-1744242293890.txt  Pasted-The-use-column-width-parameter-has-been-deprecated-and-will-be-removed-in-a-future-release-Please-u-1744336113583.txt  Pasted-data-text-csv-base64-RGF0ZSxQcm9kdWN0LFJlZ2lvbixVbml0cyxQcmljZSxDdXN0b21lcklELFJldmVudWUKMjAyMy0wNC0-1744333066634.txt  (+7 more)
pages/: 01_Upload_Data.py  (+35 more)
(+41 files in other folders)
