[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.49.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.40",
    "statsmodels>=0.14.4",
    "streamlit>=1.44.1",
    "stripe>=12.0.0",
    "tabula-py>=2.10.0",
    "xlrd>=2.0.1",
]
